# invoice_manager

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.in  .qmllint.ini  CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/actions/create-venv/: action.yml
.github/scripts/: environment.sh
.github/workflows/: build.yml
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt
doc/sphinx/: CMakeLists.txt
resources/osx_bundle/: Info.plist.in  application.icns  launch.sh.in
scripts/cmake/: FindSphinx.cmake  conan_config.cmake  conan_provider.cmake  doc_config.cmake  installer_config.cmake  pre_commit_config.cmake  qt_config.cmake  tables_config.cmake  target_config.cmake  test_config.cmake  tools_config.cmake  version.cmake
scripts/profiles/: linux  linux-debug  macos  macos-debug  macos-silicon  macos-silicon-debug  windows-x86_64-debug
src/: CMakeLists.txt
src/app/: CMakeLists.txt  icon.rc.in  init_dialog.cpp  init_dialog.h  invoice_manager_app.cpp  invoice_manager_app.h  main.cpp  resources.qrc
src/app/modules/: module.cpp  module.h
src/app/modules/security/: groups.cpp  groups.h  security.cpp  security.h  users.cpp  users.h
src/app/modules/security/tables/: groups.json  users.json
src/app/modules/ui/: main_window.cpp  main_window.h
src/app/modules/ui/menus/: MainMenu.menu
src/app/qml/: CustomButton.qml  MainMenu.qml  init_dialog.qml  login_page.qml  main_window.qml  progress_page.qml  resources.qrc
src/app/qml/Themes/: BaseFont.qml  qmldir  themes_01.qml
src/app/security/users/: user.cpp  user.h
src/app/ui/: login.qml  main_window.cpp  main_window.h  main_window.qml
src/core/: CMakeLists.txt  exception.cpp  version.cpp.in
src/core/db/: column.cpp  column.h  db_exception.h  db_manager.cpp  db_manager.h  dynamic_table.cpp  dynamic_table.h  factory.cpp  factory.h  sql_builder.cpp  sql_builder.h  sqlite_column.cpp  sqlite_column.h  sqlite_table.cpp  sqlite_table.h  table.cpp  table.h
src/core/db/sqlite/: sqlite_builder.cpp  sqlite_builder.h  sqlite_column.cpp  sqlite_column.h  sqlite_db_api.cpp  sqlite_db_api.h
src/core/include/: dllexports.h  exception.h  version.h
src/core/settings/: settings.cpp  settings.h  sql_settings.cpp  sql_settings.h  sqlite_settings.cpp  sqlite_settings.h
src/core/tools/: CMakeLists.txt  tools.cpp  tools.h
src/core/tools/db_api_generator/: CMakeLists.txt  db_api_generator.cpp  db_api_generator.h  db_class.cpp  db_class.h  main.cpp  source_template.cpp  statement.cpp  statement.h
src/core/tools/menu_generator/: CMakeLists.txt  main.cpp  menu_generator.cpp  menu_generator.h
src/core/ut/: CMakeLists.txt  ut_core_db.cpp  ut_core_db_api_generator.cpp  ut_core_package.cpp  ut_core_sqlite_configure.cpp
src/core/ut/data/: users.cpp  users.h
