#
# Part of https://github.com/ManelJimeno/invoice_manager (C) 2024
#
# Authors: Manel Jimeno <manel.jimeno@gmail.com>#
#
# License: http://www.opensource.org/licenses/mit-license.php MIT
#

# Adding the 'core' subdirectory, which contains the core functionalities of the 'invoice_manager' project.
add_subdirectory(core)

# Adding the 'app' subdirectory, which contains the main application code of the 'invoice_manager' project.
add_subdirectory(app)
